# leology

./: .gitignore  Cargo.toml  README.md  devnet.sh  start.sh  stop.sh
.trunk/: trunk.yaml
examples/dev/: .env  .gitignore  Cargo.toml  program.json
examples/dev/src/: main.leo
examples/dev/tests/: dev.rs  test.rs
examples/token/: Cargo.toml
examples/token/contracts/: run.sh
examples/token/src/: lib.rs
examples/token/tests/: test.rs  token.rs
src/: account.rs  api.rs  bindings.rs  core.rs  engine.rs  lib.rs  main.rs
