workspace = { members = ["examples/token"] }
[package]
name = "leology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
snarkvm = { git = "https://github.com/AleoHQ/snarkVM", branch = "mainnet" }
snarkvm-console = { git = "https://github.com/AleoHQ/snarkVM", branch = "mainnet" }
anyhow = "1.0.75"
rand_chacha = "0.3.1"
reqwest = "0.11.22"
serde_json = "1.0.108"
colored = "2.1.0"
ureq = "2.9.6"
indexmap = "2.2.3"
aleo-std = "0.1.24"
