workspace = { members = ["examples/token", "examples/dev"] }
[package]
name = "leology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
rand = "0.8.5"

anyhow = "1.0.97"
rand_chacha = "0.3.1"
serde_json = "1.0.140"
colored = "3.0.0"
ureq = "2.9.6"
indexmap = "2.8.0"
aleo-std = { version = "1.0.1", features = ["storage"] }
snarkvm = "1.4.0"
snarkvm-console = "1.4.0"
